# Astro-Base

./: .gitignore  README.md  TZ.txt  docker-compose.yml  index.html  package-lock.json  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  deps.py  main.py  seed.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/migrations/: env.py
apps/api/app/migrations/versions/: 202604300001_initial_schema.py  202604300002_add_shot_image_blob.py
apps/api/app/models/: __init__.py  astro_shot.py  celestial_object.py  like.py  user.py
apps/api/app/repositories/: shots.py
apps/api/app/routers/: admin.py  auth.py  objects.py  shots.py
apps/api/app/schemas/: admin.py  auth.py  objects.py  shots.py
apps/api/app/services/: auth_service.py
apps/api/astro_base_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: App.css  App.module.css  App.tsx  RenderCvans.tsx  Sphere.tsx  index.css
src/components/: AdminPage.module.css  AdminPage.tsx  AstroBase.module.css  AstroBase.tsx  AuthPanel.tsx  FilterSummary.tsx  FiltersSidebar.tsx  ShotCard.tsx  ShotModal.tsx  astroData.ts  types.ts
src/lib/: api.ts
src/planets/: Jupiter.tsx  PlanetBase.tsx  SkySphere.tsx  runtimeState.ts
